# epipipeline_v2

./: .gitignore  README.MD  pyproject.toml  testing.py
_src/epipipeline/preprocess/dengue/: karnataka.py
_src/epipipeline/preprocess/dengue/functions/: set_headers.py
_src/epipipeline/standardise/: demographics.py
_src/epipipeline/standardise/dengue/: karnataka.py
_src/epipipeline/standardise/dengue/functions/: geocode.py
_src/epipipeline/ud/: download.py
src/epipipeline/: __init__.py  logging_config.py
src/epipipeline/preprocess/: __init__.py  set_columns.py
src/epipipeline/preprocess/dengue/: ihip.py  karnataka.py  odisha.py
src/epipipeline/preprocess/dengue/functions/: MapColumns.py  SetHeaders.py  SplitWorkbookNVBDCP.py  map_columns.py  set_dataframe.py  split_workbook_NVBDCP.py  workbook_split_NVBDCP.py
src/epipipeline/standardise/: __init__.py  dates.py  demographics.py  geocode.py  gis.py  karnataka.py  settings.yaml
src/epipipeline/standardise/dengue/: ihip.py  karnataka.py  odisha.py
src/epipipeline/standardise/dengue/functions/: AssignUUID.py  ExtractMobileFromAddress.py  FixTwoDates.py  NumvarStd.py  assign_uuid.py  extract_contact.py  extract_mobile_from_address.py  fix_two_dates.py  geocode.py  standardise_result.py
src/epipipeline/standardise/gisdata/: __init__.py  geocode.py  karnataka.py
src/epipipeline/ud/: download.py  upload.py
src/epipipeline/upload/: ka-dengue-upload.py
src/epipipeline_v2/preprocess/dengue/: karnataka.py
src/epipipeline_v2/standardise/: demographics.py  karnataka.py
src/epipipeline_v2/standardise/dengue/: karnataka.py
src/epipipeline_v2/standardise/gisdata/: __init__.py  karnataka.py
